add scopus searcher tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,21 @@ addopts = "-ra -q"
 testpaths = [
     "tests"
 ]
+
+[tool.coverage.run]
+source = ['.']
+omit = [
+    "findpapers/__init__.py",
+    "findpapers/models/__init__.py",
+    "findpapers/searcher/__init__.py"
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if 0:",
+    "if __name__ == .__main__.:"
+]
