--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest = "^5.2"
 pytest-cov = "^2.10.1"
 pytest-randomly = "^3.4.1"
 Sphinx = "^3.2.1"
+coverage = {version = "^5.2.1", extras = ["toml"]}
 
 [tool.poetry.urls]
 issues = "https://gitlab.com/jonatasgrosman/findpapers/-/issues"
