feat: adds ieee support

--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,10 @@
 # This variable is optional, if it's not provided, the Scopus scrapper will be skipped
 SCOPUS_API_TOKEN=
 
+# This is the IEEE API token that will be passed to its API calls. If you don't have one, go to https://developer.ieee.org/
+# This variable is optional, if it's not provided, the IEEE scrapper will be skipped
+IEEE_API_TOKEN=
+
 # The logging level (see https://docs.python.org/3/library/logging.html#levels), it controls the logging verbosity.
 # The default value is INFO, but we recommend to set this to DEBUG on development
 LOGGING_LEVEL=INFO
