--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ colorama = "^0.4.3"
 inquirer = "^2.7.0"
 numpy = "^1.19.1"
 edlib = "^1.3.8"
+xmltodict = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
