feat: add arXiv support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "findpapers"
 version = "1.0.0"
-description = "Easy way to find academic papers across scientific libraries using a single query."
+description = "Easy way to find academic papers across scientific databases by using a single query."
 authors = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
 maintainers = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
 license = "MIT"
