--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,7 @@ IEEE_API_TOKEN=
 # The logging level (see https://docs.python.org/3/library/logging.html#levels), it controls the logging verbosity.
 # The default value is INFO, but we recommend to set this to DEBUG on development
 LOGGING_LEVEL=INFO
+
+# Proxies to be used for papers downloading on sample scripts
+HTTPS_PROXY=
+HTTP_PROXY=
