fix: adjust download feature + adjust project structure

--- a/.env.sample
+++ b/.env.sample
@@ -11,5 +11,5 @@ IEEE_API_TOKEN=
 LOGGING_LEVEL=INFO
 
 # Proxies to be used for papers downloading on sample scripts
-HTTPS_PROXY=
-HTTP_PROXY=
+HTTPS_PROXY_URL=
+HTTPS_PROXY_URL=
