feat: add custom request session

--- a/.env.sample
+++ b/.env.sample
@@ -1,15 +1,14 @@
 # This is the Scopus API token that will be passed to its API calls. If you don't have one, go to https://dev.elsevier.com/
 # This variable is optional, if it's not provided, the Scopus scrapper will be skipped
-SCOPUS_API_TOKEN=
+FINDPAPERS_SCOPUS_API_TOKEN=
 
 # This is the IEEE API token that will be passed to its API calls. If you don't have one, go to https://developer.ieee.org/
 # This variable is optional, if it's not provided, the IEEE scrapper will be skipped
-IEEE_API_TOKEN=
+FINDPAPERS_IEEE_API_TOKEN=
 
-# The logging level (see https://docs.python.org/3/library/logging.html#levels), it controls the logging verbosity.
-# The default value is INFO, but we recommend to set this to DEBUG on development
-LOGGING_LEVEL=INFO
+# If VERBOSE=True, the application logging will be more verbose, we recommend to keep this True on dev
+FINDPAPERS_VERBOSE=True
 
 # Proxies to be used for papers downloading on sample scripts
-HTTPS_PROXY_URL=
-HTTPS_PROXY_URL=
+FINDPAPERS_HTTP_PROXY=
+FINDPAPERS_HTTPS_PROXY=
