--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ repository = "https://gitlab.com/jonatasgrosman/findpapers"
 documentation = "https://gitlab.com/jonatasgrosman/findpapers"
 keywords = ["Paper", "Academic", "Scrapper", "Crawler"]
 
+[tool.poetry.scripts]
+findpapers = "findpapers.cli:main"
+
 [tool.poetry.dependencies]
 python = "^3.7"
 lxml = "^4.5.2"
@@ -20,6 +23,7 @@ colorama = "^0.4.3"
 inquirer = "^2.7.0"
 edlib = "^1.3.8"
 xmltodict = "^0.12.0"
+typer = "^0.3.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
