feat: use only one proxy URL for HTTPS and HTTP requests

--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,5 @@ FINDPAPERS_SCOPUS_API_TOKEN=
 # This variable is optional, if it's not provided, the IEEE scrapper will be skipped
 FINDPAPERS_IEEE_API_TOKEN=
 
-# Proxies to be used for papers downloading on sample scripts
-FINDPAPERS_HTTP_PROXY=
-FINDPAPERS_HTTPS_PROXY=
+# Proxy to be used on requests
+FINDPAPERS_PROXY=
