build: adjust package details for publishing

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
+# PyPi API token used to publish the application 
+PYPI_API_TOKEN = 
+
 # This is the Scopus API token that will be passed to its API calls. If you don't have one, go to https://dev.elsevier.com/
 # This variable is optional, if it's not provided, the Scopus scrapper will be skipped
 FINDPAPERS_SCOPUS_API_TOKEN=
