feat: add the possibility to pass query by an environment variable

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 # PyPi API token used to publish the application 
-PYPI_API_TOKEN = 
+FINDPAPERS_PYPI_API_TOKEN = 
 
 # This is the Scopus API token that will be passed to its API calls. If you don't have one, go to https://dev.elsevier.com/
 # This variable is optional, if it's not provided, the Scopus scrapper will be skipped
@@ -11,3 +11,6 @@ FINDPAPERS_IEEE_API_TOKEN=
 
 # Proxy to be used on requests
 FINDPAPERS_PROXY=
+
+# Query to be used on database searching
+FINDPAPERS_QUERY=
