--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "findpapers"
-version = "0.1.0"
-description = "Easy way to find academic papers across scientific databases by using a single query."
+version = "0.2.0"
+description = "Findpapers is an application that helps researchers who are looking for references for their research."
 authors = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
 maintainers = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
 license = "MIT"
