--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ inquirer = "^2.7.0"
 edlib = "^1.3.8"
 xmltodict = "^0.12.0"
 typer = "^0.3.2"
+importlib-metadata = {version = "^1.0", python = "<3.8"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
