--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ default:
 cache:
     key: ${CI_COMMIT_REF_SLUG}
     paths:
+      - /root/.cache/pypoetry/virtualenvs/
       - dist
 
 stages:
@@ -24,4 +25,5 @@ publish-package:
     rules:
         - if: '$CI_COMMIT_TAG != null'
     script:
+        - echo FINDPAPERS_PYPI_API_TOKEN=$FINDPAPERS_PYPI_API_TOKEN > .env
         - make publish
