build: update package description

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "Findpapers"
 version = "0.5.1"
-description = "Findpapers is an application that helps researchers who are looking for references for their research."
+description = "Findpapers is an application that helps researchers who are looking for references for their work."
 authors = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
 maintainers = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
 license = "MIT"
