--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "Findpapers"
-version = "0.5.3"
+version = "0.6.0"
 description = "Findpapers is an application that helps researchers who are looking for references for their work."
 authors = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
 maintainers = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
@@ -9,7 +9,7 @@ readme = "README.md"
 homepage = "https://gitlab.com/jonatasgrosman/findpapers"
 repository = "https://gitlab.com/jonatasgrosman/findpapers"
 documentation = "https://gitlab.com/jonatasgrosman/findpapers"
-keywords = ["academic", "academic-publications", "academic-publishing", "acm", "arxiv", "bibtex", "biorxiv", "collect-papers", "crawler", "ieee", "medrxiv", "paper", "papers", "pubmed", "research", "scientific-papers", "scientific-publications", "scientific-publishing", "scopus", "scraper"]
+keywords = ["academic", "academic publications", "academic publishing", "acm", "arxiv", "bibtex", "biorxiv", "collect papers", "crawler", "ieee", "medrxiv", "paper", "papers", "pubmed", "research", "scientific papers", "scientific publications", "scientific publishing", "scopus", "scraper", "systematic mapping", "systematic review"]
 
 [tool.poetry.scripts]
 findpapers = "findpapers.cli:main"
