--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
 name = "Findpapers"
-version = "0.6.4"
+version = "0.6.5"
 description = "Findpapers is an application that helps researchers who are looking for references for their work."
 authors = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
 maintainers = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
 license = "MIT"
 readme = "README.md"
-homepage = "https://gitlab.com/jonatasgrosman/findpapers"
-repository = "https://gitlab.com/jonatasgrosman/findpapers"
-documentation = "https://gitlab.com/jonatasgrosman/findpapers"
+homepage = "https://github.com/jonatasgrosman/findpapers"
+repository = "https://github.com/jonatasgrosman/findpapers"
+documentation = "https://github.com/jonatasgrosman/findpapers"
 keywords = ["academic", "academic publications", "academic publishing", "acm", "arxiv", "bibtex", "biorxiv", "collect papers", "crawler", "ieee", "medrxiv", "paper", "papers", "pubmed", "research", "scientific papers", "scientific publications", "scientific publishing", "scopus", "scraper", "systematic mapping", "systematic review"]
 
 [tool.poetry.scripts]
@@ -33,7 +33,7 @@ Sphinx = "^3.2.1"
 coverage = {version = "^5.2.1", extras = ["toml"]}
 
 [tool.poetry.urls]
-issues = "https://gitlab.com/jonatasgrosman/findpapers/-/issues"
+issues = "https://github.com/jonatasgrosman/findpapers/issues"
 
 [tool.pytest.ini_options]
 junit_family = "xunit2"
