--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "Findpapers"
-version = "0.6.7"
+version = "0.6.8"
 description = "Findpapers is an application that helps researchers who are looking for references for their work."
 authors = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
 maintainers = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
@@ -15,22 +15,21 @@ keywords = ["academic", "academic publications", "academic publishing", "acm", "
 findpapers = "findpapers.cli:main"
 
 [tool.poetry.dependencies]
-python = "^3.7"
-lxml = "^4.5.2"
-requests = "^2.24.0"
-colorama = "^0.4.3"
-inquirer = "^2.7.0"
-edlib = "^1.3.8"
-xmltodict = "^0.12.0"
-typer = "^0.3.2"
-importlib-metadata = {version = "^1.0", python = "<3.8"}
+python = "^3.13"
+lxml = "^6.0.0"
+requests = "^2.32.4"
+inquirer = "^3.4.0"
+edlib = "^1.3.9.post1"
+xmltodict = "^0.14.2"
+typer = "^0.16.0"
+termcolor = "^3.1.0"
 
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
-pytest-cov = "^2.10.1"
-pytest-randomly = "^3.4.1"
-Sphinx = "^3.2.1"
-coverage = {version = "^5.2.1", extras = ["toml"]}
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.1"
+pytest-cov = "^6.2.1"
+pytest-randomly = "^3.16.0"
+Sphinx = "^8.2.3"
+coverage = {version = "^7.9.2", extras = ["toml"]}
 
 [tool.poetry.urls]
 issues = "https://github.com/jonatasgrosman/findpapers/issues"
