--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Get full python version
         id: full-python-version
-        run: echo ::set-output name=version::$(python -c "import sys; print('-'.join(str(v) for v in sys.version_info))")
+        run: echo "version=$(python -c \"import sys; print('-'.join(str(v) for v in sys.version_info))\")" >> $GITHUB_OUTPUT
       - name: Install poetry
         run: |
           python -m pip install --upgrade pip
@@ -42,4 +42,4 @@ jobs:
       - name: Test
         run: python -m poetry run pytest --cov=findpapers 
       - name: Upload coverage
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v4
