--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,12 @@ jobs:
           python-version: "3.10"
       - name: Get full python version
         id: full-python-version
-        run: echo "version=$(python -c \"import sys; print('-'.join(str(v) for v in sys.version_info))\")" >> $GITHUB_OUTPUT
+        run: |
+          echo "version=$(python - <<'PY'
+          import sys
+          print('-'.join(str(v) for v in sys.version_info))
+          PY
+          )" >> "$GITHUB_OUTPUT"
       - name: Install poetry
         run: |
           python -m pip install --upgrade pip
