--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -40,7 +40,7 @@ jobs:
         run: mypy findpapers tests/unit --exclude 'tests/integration|_ignore' --ignore-missing-imports --allow-untyped-defs --allow-untyped-globals --follow-imports=silent
         continue-on-error: true
       - name: Run tests with coverage
-        run: pytest -q --maxfail=1 --disable-warnings --cov=findpapers --cov-report=xml
+        run: poetry run pytest -q --maxfail=1 --disable-warnings --cov=findpapers --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
