--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,16 @@ exclude_lines = [
     "if 0:",
     "if __name__ == .__main__.:"
 ]
+
+[tool.black]
+line-length = 100
+
+[tool.ruff]
+line-length = 100
+
+[tool.isort]
+profile = "black"
+line_length = 100
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
