ci: run tests on PRs and only on push to develop/main to avoid duplicate runs

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,12 @@
 name: Test
 
 on:
-  push:
   pull_request:
-    types: [opened, synchronize]
+    types: [opened, synchronize, reopened]
+  push:
+    branches:
+      - develop
+      - main
 
 jobs:
   test:
