ci: update label sync, codeql, release-drafter config and dependabot settings

--- a/.github/release-drafter-config.yml
+++ b/.github/release-drafter-config.yml
@@ -1,4 +1,5 @@
-name-template: 'v$NEXT_PATCH'
+name-template: 'v$RESOLVED_VERSION'
+tag-template: 'v$RESOLVED_VERSION'
 categories:
   - title: '🚀 Features'
     labels:
@@ -16,3 +17,6 @@ categories:
     labels:
       - chore
 change-template: '- $TITLE (#$NUMBER) @$AUTHOR'
+template: |
+  ## What's Changed
+  $CHANGES
