ci: update GitHub Actions workflows and configuration files for label management and release drafting

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,5 +1,6 @@
 version: 2
 updates:
+  # Dependabot uses "pip" for Poetry projects (pyproject.toml + poetry.lock).
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
