--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,8 +2,8 @@
 # Format: <path> <owner> <owner>
 
 /docs/ @jonatasgrosman
-findpapers/searchers/ @jonatasgrosman
-findpapers/tools/ @jonatasgrosman
-findpapers/models/ @jonatasgrosman
-tests/ @jonatasgrosman
-.github/workflows/ @jonatasgrosman
+/findpapers/searchers/ @jonatasgrosman
+/findpapers/tools/ @jonatasgrosman
+/findpapers/models/ @jonatasgrosman
+/tests/ @jonatasgrosman
+/.github/workflows/ @jonatasgrosman
