ci: update label sync workflow to use micnncim/action-label-syncer@v1 and streamline config

--- a/.github/workflows/labels_sync.yml
+++ b/.github/workflows/labels_sync.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Sync repository labels
-        uses: repo-sync/labels@v5
+        uses: micnncim/action-label-syncer@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          config_path: .github/labels-config.yml
+          manifest: .github/labels-config.yml
