--- a/.github/workflows/pr_labeler.yml
+++ b/.github/workflows/pr_labeler.yml
@@ -18,5 +18,5 @@ jobs:
       - name: Label pull request
         uses: actions/labeler@v6
         with:
-          configuration-path: .github/labeler-config.yml
+          configuration-path: .github/pr_labeler-config.yml
           repo-token: ${{ secrets.GITHUB_TOKEN }}
