chore: restore pull request trigger types in release drafter workflow

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,5 +1,7 @@
 name: Release Drafter
 on:
+  pull_request:
+    types: [opened, synchronize, reopened, edited]
   push:
     branches:
       - develop
