--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,16 +15,18 @@ keywords = ["academic", "academic publications", "academic publishing", "arxiv",
 python = "^3.10"
 lxml = "^4.5.2"
 requests = "^2.24.0"
-edlib = "^1.3.8"
-xmltodict = "^0.12.0"
-importlib-metadata = {version = "^1.0", python = "<3.8"}
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
 pytest-cov = "^4.1.0"
 pytest-randomly = "^3.15.0"
-Sphinx = "^3.2.1"
 coverage = {version = "^7.4.4", extras = ["toml"]}
+types-requests = "^2.31.0"
+lxml-stubs = "^0.4.0"
+ruff = "^0.14.14"
+mypy = "^1.19.1"
+isort = "^7.0.0"
+black = "^26.1.0"
 
 [tool.poetry.urls]
 issues = "https://github.com/jonatasgrosman/findpapers/issues"
