feat(utils): add API sample data collectors for all databases
- Add standalone collector scripts for 8 databases (arxiv, biorxiv, medrxiv,
  ieee, pubmed, scopus, openalex, semanticscholar)
- Add master script to run all collectors at once
- Add comprehensive documentation in tests/data/README.md
- Update .env.sample with detailed API key descriptions, rate limits,
  and step-by-step instructions for obtaining each key
- bioRxiv/medRxiv collectors use web scraping + API approach
- All collectors save raw responses and collection metadata

--- a/.env.sample
+++ b/.env.sample
@@ -1,16 +1,141 @@
-# PyPi API token used to publish the application 
-FINDPAPERS_PYPI_API_TOKEN = 
+# =============================================================================
+# FINDPAPERS - Environment Configuration
+# =============================================================================
+# Copy this file to .env and fill in your API keys
+# =============================================================================
 
-# This is the Scopus API token that will be passed to its API calls. If you don't have one, go to https://dev.elsevier.com/
-# This variable is optional, if it's not provided, the Scopus scrapper will be skipped
+# -----------------------------------------------------------------------------
+# PyPi API Token (for package publishing only - not needed for using findpapers)
+# -----------------------------------------------------------------------------
+FINDPAPERS_PYPI_API_TOKEN=
+
+# -----------------------------------------------------------------------------
+# SCOPUS (Elsevier) API TOKEN
+# -----------------------------------------------------------------------------
+# Required: YES - Scopus database will be skipped without this token
+# 
+# Rate Limits:
+#   - Varies by API key settings (check X-RateLimit headers in responses)
+#   - Quota resets every 7 days
+#   - Exceeding limits returns HTTP 429 (TOO MANY REQUESTS)
+#
+# How to obtain:
+#   1. Go to https://dev.elsevier.com/
+#   2. Create a free account or sign in
+#   3. Go to "My API Key" section
+#   4. Create a new API key for your application
+#   5. Copy the generated API key here
+#
+# Note: Your institution may need to have a Scopus subscription for full access.
+# Academic institutions typically have this access enabled by default.
+#
+# Documentation: https://dev.elsevier.com/documentation/ScopusSearchAPI.wadl
+# -----------------------------------------------------------------------------
 FINDPAPERS_SCOPUS_API_TOKEN=
 
-# This is the IEEE API token that will be passed to its API calls. If you don't have one, go to https://developer.ieee.org/
-# This variable is optional, if it's not provided, the IEEE scrapper will be skipped
+# -----------------------------------------------------------------------------
+# IEEE XPLORE API TOKEN
+# -----------------------------------------------------------------------------
+# Required: YES - IEEE database will be skipped without this token
+#
+# Rate Limits:
+#   - Free tier: 200 requests per day
+#   - Contact IEEE for higher limits
+#
+# How to obtain:
+#   1. Go to https://developer.ieee.org/
+#   2. Click "Register" to create a free account
+#   3. After registration, go to your dashboard
+#   4. Create a new application to get your API key
+#   5. Copy the generated API key here
+#
+# Note: IEEE API provides access to 5+ million documents from IEEE and IET.
+#
+# Documentation: https://developer.ieee.org/docs
+# -----------------------------------------------------------------------------
 FINDPAPERS_IEEE_API_TOKEN=
 
-# Proxy to be used on requests
-FINDPAPERS_PROXY=
+# -----------------------------------------------------------------------------
+# PUBMED (NCBI E-utilities) API TOKEN
+# -----------------------------------------------------------------------------
+# Required: NO - Works without a key, but with lower rate limits
+#
+# Rate Limits:
+#   - Without API key: 3 requests per second
+#   - With API key: 10 requests per second (recommended)
+#   - Higher rates available upon request to NCBI
+#
+# How to obtain:
+#   1. Go to https://www.ncbi.nlm.nih.gov/account/ and create a free NCBI account
+#   2. After logging in, go to Settings (click on your username)
+#   3. Scroll down to "API Key Management" section
+#   4. Click "Create an API Key"
+#   5. Copy the generated API key here
+#
+# Note: NCBI recommends registering your tool name and email even without a key.
+# Failure to comply with rate limits may result in IP blocking.
+#
+# Documentation: https://www.ncbi.nlm.nih.gov/books/NBK25497/
+# -----------------------------------------------------------------------------
+FINDPAPERS_PUBMED_API_TOKEN=
 
-# Query to be used on database searching
-FINDPAPERS_QUERY=
+# -----------------------------------------------------------------------------
+# SEMANTIC SCHOLAR API TOKEN
+# -----------------------------------------------------------------------------
+# Required: NO - Works without a key, but with lower rate limits
+#
+# Rate Limits:
+#   - Without API key: 1000 requests per second (shared among all unauthenticated users)
+#   - With API key: 1 request per second (introductory), can be increased upon request
+#   - Some endpoints require authentication
+#
+# How to obtain:
+#   1. Go to https://www.semanticscholar.org/product/api
+#   2. Click "Request an API Key" button
+#   3. Fill out the request form with your use case details
+#   4. You will receive your API key via email (may take 1-2 business days)
+#   5. Copy the received API key here
+#
+# Note: Do not share your key with anyone. API key must be set in the header
+# 'x-api-key' (case-sensitive) when making requests.
+#
+# Corpus size: 214M+ papers, 2.49B+ citations, 79M+ authors
+#
+# Documentation: https://api.semanticscholar.org/api-docs/
+# -----------------------------------------------------------------------------
+FINDPAPERS_SEMANTIC_SCHOLAR_API_TOKEN=
+
+# -----------------------------------------------------------------------------
+# OPENALEX API TOKEN
+# -----------------------------------------------------------------------------
+# Required: YES (as of February 2026) - 100 credits/day without key (testing only)
+#
+# Rate Limits:
+#   - Without API key: 100 credits per day (for testing/demos only)
+#   - With free API key: 100,000 credits per day
+#   - All users: max 100 requests per second
+#   - Credit costs: singleton requests are free, list requests cost 1 credit each
+#
+# How to obtain:
+#   1. Go to https://openalex.org/ and create a free account
+#   2. After logging in, go to https://openalex.org/settings/api
+#   3. Generate your API key
+#   4. Add the key to your requests as ?api_key=YOUR_KEY parameter
+#   5. Copy the API key here
+#
+# Note: Academic researchers can often get increased limits for free.
+# Contact support@openalex.org for higher limits.
+#
+# Corpus size: 250M+ works from 250k+ sources
+#
+# Documentation: https://docs.openalex.org/
+# -----------------------------------------------------------------------------
+FINDPAPERS_OPENALEX_API_TOKEN=
+
+# -----------------------------------------------------------------------------
+# ADDITIONAL SETTINGS
+# -----------------------------------------------------------------------------
+
+# Proxy to be used on HTTP requests (optional)
+# Format: http://user:password@host:port or http://host:port
+FINDPAPERS_PROXY=
